cluster/apps/nextcloud/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-web
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`nextcloud.alekssro.com`) && PathPrefix(`/`)
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`nextcloud.alekssro.com`) && PathPrefix(`/`)
      services:
        - name: nextcloud
          namespace: nextcloud
          port: 8080
  tls:
    certResolver: dns-le
